# cc_wc

./: README.md  pyproject.toml
src/: ccwc.py
src/cc_wc/: cc_wc.py  cli.py
src/ccwc/: cli.py
tests/: test_cc_wc.py  test_ccwc.py  test_main.py
