[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc_wc"
version = "0.0.1"
requires-python = ">= 3.11"
authors =[
    {name = "Aaron Elmquist"},
]
description = "python based wc"
dependencies = [
    "click",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
ccwc = "cc_wc.cli:app"
